--- a/labs/html labs/lab1/cite.css
+++ b/labs/html labs/lab1/cite.css
@@ -4,6 +4,7 @@ html {
 }
 .background {
     background-color:azure;
+    padding: 5px;
 }
 body  {
     max-width:600px;
@@ -19,7 +20,7 @@ img {
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 5px;
-    width: 200px;
+    width: 150px;
 }
 .quote {
     font-style: italic;
